<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorText"
        android:orientation="vertical">

        <ImageView
            style="@style/Logo"
            android:src="@drawable/logo" />

        <View style="@style/HorizontalBlackLine" />

        <ImageView
            style="@style/MainImage"
            android:src="@drawable/background" />

        <View style="@style/HorizontalBlackLine" />

        <TextView
            style="@style/MainTitle"
            android:text="@string/main_title"
            android:textSize="@dimen/text_size_title_vertical" />

        <View style="@style/HorizontalBlackLine" />

        <TextView
            style="@style/Subtitle"
            android:text="@string/description"
            android:textSize="@dimen/text_size_title_vertical" />

        <RelativeLayout style="@style/MyRelativeLayouts">

            <ImageView
                android:id="@+id/icon_1"
                style="@style/MyImageViews"
                android:contentDescription="@string/icon1_description"
                android:src="@drawable/ic_location_on_black_18dp" />

            <TextView
                style="@style/MyTextViews"
                android:layout_toEndOf="@id/icon_1"
                android:layout_toRightOf="@id/icon_1"
                android:text="@string/address" />
        </RelativeLayout>

        <RelativeLayout style="@style/MyRelativeLayouts">

            <ImageView
                android:id="@+id/icon_2"
                style="@style/MyImageViews"
                android:contentDescription="@string/icon2_description"
                android:src="@drawable/ic_home_black_18dp" />

            <TextView
                style="@style/MyTextViews"
                android:layout_toEndOf="@id/icon_2"
                android:layout_toRightOf="@id/icon_2"
                android:text="@string/web" />
        </RelativeLayout>

        <RelativeLayout style="@style/MyRelativeLayouts">

            <ImageView
                android:id="@+id/icon_3"
                style="@style/MyImageViews"
                android:contentDescription="@string/icon3_description"
                android:src="@drawable/ic_call_black_18dp" />

            <TextView
                style="@style/MyTextViews"
                android:layout_toEndOf="@id/icon_3"
                android:layout_toRightOf="@id/icon_3"
                android:text="@string/phone" />
        </RelativeLayout>

        <RelativeLayout style="@style/MyRelativeLayouts">

            <ImageView
                android:id="@+id/icon_4"
                style="@style/MyImageViews"
                android:contentDescription="@string/icon4_description"
                android:src="@drawable/ic_av_timer_black_18dp" />

            <TextView
                style="@style/MyTextViews"
                android:layout_toEndOf="@id/icon_4"
                android:layout_toRightOf="@id/icon_4"
                android:text="@string/timetable" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground" />
    </LinearLayout>
</ScrollView>